--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -22,3 +22,15 @@
 body {
   font-family: "GenSekiGothic";
 }
+h1 {
+  font-size: 2rem;
+}
+h2 {
+  font-size: 1.5rem;
+}
+h3 {
+  font-size: 1.17rem;
+}
+h4 {
+  font-size: 1rem;
+}
