--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -21,15 +21,24 @@
 /*----typography--*/
 body {
   font-family: "GenSekiGothic";
+  text-align: center;
 }
+h1,
+h2,
+h3,
+h4 {
+  font-weight: 800;
+  text-transform: uppercase;
+}
+
 h1 {
   font-size: 2rem;
 }
 h2 {
-  font-size: 1.5rem;
+  font-size: 1.75rem;
 }
 h3 {
-  font-size: 1.17rem;
+  font-size: 1.5rem;
 }
 h4 {
   font-size: 1.5rem;
@@ -42,4 +51,10 @@ img {
 .container {
   margin: 0 auto;
   width: 90%;
+}
+
+.subtite {
+  font-family: "futur";
+  color: transparent;
+  -webkit-text-stroke: 0.7px black;
 }
