--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -3,7 +3,7 @@
 /*-----color-variable----*/
 :root {
   --main-bg-color: #cddf20;
-  --secondary-bg-color: #e6e6e6;
+  --secondary-bg-color: #cccccc;
   --black: #000000;
   --white: white;
 }
